// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when no text is passed as prop 1`] = `
<td
  className="px-2 border-collapse md:leading-5 lg:leading-3 border border-gray-400"
/>
`;

exports[`renders when text is passed as prop 1`] = `
<td
  className="px-2 border-collapse md:leading-5 lg:leading-3 border border-gray-400"
>
  0.987
</td>
`;
